# DarkoVM

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Additional tests/: README.md
Additional tests/SimpleAnd/: SimpleAnd.cmp  SimpleAnd.tst  SimpleAnd.vm
Additional tests/SimpleEq/: SimpleEq.tst  SimpleEq.vm
Additional tests/SimpleGt/: SimpleGt.tst  SimpleGt.vm
Additional tests/SimpleLt/: SimpleLt.tst  SimpleLt.vm
Additional tests/SimpleNeg/: SimpleNeg.cmp  SimpleNeg.tst  SimpleNeg.vm
Additional tests/SimpleNot/: SimpleNot.cmp  SimpleNot.tst  SimpleNot.vm
Additional tests/SimpleOr/: SimpleOr.cmp  SimpleOr.tst  SimpleOr.vm
Additional tests/SimpleSub/: SimpleSub.cmp  SimpleSub.tst  SimpleSub.vm
DarkoVM/: AssemblyMap.cpp  AssemblyMap.h  CMakeLists.txt  Code.cpp  Code.h  DarkoVM.cpp  Parser.cpp  Parser.h  Test.asm
DarkoVM/Data/: eq.asm  gt.asm  lt.asm  or.asm  push_constant.asm
DarkoVM/Data/Arithmetic/: add.asm  and.asm  eq.asm  gt.asm  lt.asm  neg.asm  not.asm  sub.asm
DarkoVM/Data/Pop/: pop_argument.asm  pop_local.asm  pop_static.asm  pop_temp.asm  pop_that.asm  pop_this.asm
DarkoVM/Data/Push/: push_argument.asm  push_local.asm  push_pointer.asm  push_static.asm  push_that.asm  push_this.asm
